@@ -35,7 +35,7 @@ my_strdup (char *str)
   
   if (str)
     {
-      new_str = malloc ((strlen (str) + 1) * sizeof(char));
+      new_str = (char*) malloc ((strlen (str) + 1) * sizeof(char));
       strcpy (new_str, str);
     }
   else
